# SDU_canteen_feedback_system

./: CMakeLists.txt  admin.cpp  admin.h  admindelete.cpp  admindelete.h  admindelete.ui  adminfunc.cpp  adminfunc.h  adminfunc.ui  adminlogin.cpp  adminlogin.h  adminlogin.ui  adminpasswordchange.cpp  adminpasswordchange.h  adminpasswordchange.ui  adminsignup.cpp  adminsignup.h  adminsignup.ui  commentshow.cpp  commentshow.h  commentshow.ui  commentsubmit.cpp  commentsubmit.h  commentsubmit.ui  dishes.cpp  dishes.h  dishesadd.cpp  dishesadd.h  dishesadd.ui  dishesdelete.cpp  dishesdelete.h  dishesdelete.ui  dishessearch.cpp  dishessearch.h  dishessearch.ui  dishesshow.cpp  dishesshow.h  dishesshow.ui  dishesshownew.cpp  dishesshownew.h  (+21 more)
